<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_persons"
        android:title="@string/menu_person" />
    <item
        android:id="@+id/menu_categories"
        android:title="@string/menu_categories" />
    <item
        android:id="@+id/menu_backup_restore"
        android:title="@string/menu_backup_restore" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
</menu>